--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -5,29 +5,28 @@ on:
     branches: [main]
   workflow_dispatch:
 
+
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [23.x]
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - name: Set Node.js 22.x
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: 22.x
 
-      - name: Install  dependencies
-        run: npm i
-
-      - name: Build Production
-        run: npm run build-prod
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
+          
+      - name: Build production bundle
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build-prod
 
   deploy:
     needs: build
