Refactoring pipeline version

--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -22,7 +22,7 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: install
-          
+
       - name: Build production bundle
         uses: borales/actions-yarn@v4
         with:
@@ -30,10 +30,16 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
