--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -28,6 +28,12 @@ jobs:
         with:
           cmd: build-prod
 
+      - name: Upload production bundle
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: ./dist
+
   deploy:
     needs: build
 
