--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -5,34 +5,20 @@ on:
     branches: [main]
   workflow_dispatch:
 
-
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set Node.js 22.x
-        uses: actions/setup-node@v3
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install, build, and upload your site output
+        uses: withastro/action@v4
         with:
-          node-version: 22.x
+          path: . # The root location of your Astro project inside the repository. (optional)
+          node-version: 22 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
+        # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
-      - name: Run install
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: install
-
-      - name: Build production bundle
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: build-prod
-
-      - name: Upload production bundle
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: ./dist
 
   deploy:
     needs: build
