Change piple and env

--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,2 @@
-# This file is used to set environment variables for the production environment.
+SITE_URL='https://eckwerkstuttgart.de/'
 BASE_URL='/'
