--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build --mode=prod",
     "build-prod": "astro check && astro build --mode=prod",
     "preview": "astro preview",
     "astro": "astro",
