--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Install, build, and upload your site output
         uses: withastro/action@v4
         with:
-          node-version: 22 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
-          package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
-
+          node-version: 22
+          package-manager: yarn@latest
+          path: '.'
 
   deploy:
     needs: build
