--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@fontsource/source-sans-pro": "^5.0.8",
     "@iconify-json/line-md": "^1.1.38",
     "@iconify-json/mdi": "^1.1.67",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
+    "@playform/compress": "^0.2.0",
     "astro": "^4.11.3",
+    "astro-compressor": "^1.0.0",
     "astro-favicons": "^2.0.2",
     "astro-icon": "^1.1.0",
     "astro-image": "^0.0.7",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
+    "astro-webmanifest": "^1.0.0",
     "photoswipe": "^5.4.4",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13",
