--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
     "astro-webmanifest": "^1.0.0",
+    "gsap": "^3.13.0",
     "photoswipe": "^5.4.4",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13",
