--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build-prod": "astro check && astro build --mode=prod",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
+    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\"",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "changeset publish"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -42,6 +45,7 @@
     "vite-plugin-image-optimizer": "^1.1.8"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@types/photoswipe": "^4.1.6",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.6.0",
