--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -5,9 +5,13 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release:
-    name: Release
+    name: Versioning
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -24,7 +28,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Set version and generate changelog
         id: changesets
         uses: changesets/action@v1
         with:
