--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -4,22 +4,25 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, labeled]
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  release:
-    name: Versioning
+  changesets:
+    name: Create Release PR
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
-      - name: Checkout Repo
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Setup Node.js Environment
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -28,10 +31,37 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Set version and generate changelog
+      - name: Create Release Pull Request
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: yarn version
+          version: yarn version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  close-empty-changeset-pr:
+    name: Close Empty Changeset PR
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && (github.actor == 'github-actions[bot]' || github.actor == 'changeset[bot]')
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Check for empty changeset
+        id: check_changeset
+        run: |
+          if [ ! -d ".changeset" ] || [ -z "$(ls -A .changeset | grep -v 'README.md\|config.json' | grep '.md')" ]; then
+            echo "No changeset found"
+            echo "should_close=true" >> $GITHUB_OUTPUT
+          else
+            echo "Changeset(s) found"
+            echo "should_close=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Close PR
+        if: steps.check_changeset.outputs.should_close == 'true'
+        run: |
+          gh pr close "$PR_URL" --comment "No packages to release — closing automatically."
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
